--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,17 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+<html>
+
+<body>
+    <div id="root"></div>
+    <script type="module">
+        const element = document.createElement('div')
+        element.textContent = 'Hello World'
+
+        const rootElement = document.getElementById('root')
+        rootElement.appendChild(element)
+    </script>
+</body>
+
+</html>
